--- a/templates/io.html
+++ b/templates/io.html
@@ -25,6 +25,12 @@
                 <a class="nav-link" href="http://127.0.0.1:5000/">Back</a>
             </li>
             <li class="nav-item active">
+                <a class="nav-link" href="http://127.0.0.1:5000/add">Add word</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="http://127.0.0.1:5000/edit">Edit word</a>
+            </li>
+            <li class="nav-item active">
                 <a class="nav-link" href="http://127.0.0.1:5000/remove">Remove word</a>
             </li>
             <li class="nav-item active">
