--- a/templates/edit.html
+++ b/templates/edit.html
@@ -14,6 +14,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <style>
+        nav {}
     </style>
 </head>
 
@@ -25,9 +26,6 @@
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="http://127.0.0.1:5000/add">Add word</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="http://127.0.0.1:5000/edit">Edit word</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="http://127.0.0.1:5000/remove">Remove word</a>
@@ -47,24 +45,29 @@
         <h1 class="text-center">Vocabulary-Trainer</h1>
     </div>
     <div class="container">
-        <table class="table">
-            {% for com in data %}
-                <th>Box{{com.id}}</th>
-                <tbody>
-                    {% for cd in com.get_cards() %}
-                        <tr>
-                            <td>{{cd.get_front()}}</td>
-                            <td>{{cd.get_back()}}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            {% endfor %}
-        </table>
-        {% if status %}
-          <div class="alert alert-info">
-            At the moment the filling box is empty.
-          </div>
-        {% endif %}
+        <form action="http://127.0.0.1:5000/edit" method="POST" class="form-group">
+            <label for="deck">Deck:</label>
+            <select name="deck" class="form-control" onclick="this.form.submit()">
+                <option value="1">Deck 1</option>
+                <option value="2">Deck 2</option>
+                <option value="3">Deck 3</option>
+                <option value="4">Deck 4</option>
+                <option value="5">Deck 5</option>
+            </select>
+            {% if status %}
+            <select name="card" class="form-control">
+                {% for cd in cards %}
+                <option value={{loop.index}}>{{cd.get_front()}}, {{cd.get_back()}}</option>
+                {% endfor %}
+            </select>
+            <label for="front">Front</label>
+            <input type="text" name="front" class="form-control">
+            <label for="back">Back</label>
+            <input type="text" name="back" class="form-control">
+            {% endif %}
+            <button type="submit" class="btn btn-block btn-primary btn-large">Change</button>
+        </form>
+       
     </div>
 </body>
 
