--- a/templates/remove.html
+++ b/templates/remove.html
@@ -28,6 +28,9 @@
                 <a class="nav-link" href="http://127.0.0.1:5000/add">Add word</a>
             </li>
             <li class="nav-item active">
+                <a class="nav-link" href="http://127.0.0.1:5000/edit">Edit word</a>
+            </li>
+            <li class="nav-item active">
                 <a class="nav-link" href="http://127.0.0.1:5000/display">Display</a>
             </li>
             <li class="nav-item active">
