--- a/templates/io.html
+++ b/templates/io.html
@@ -48,7 +48,8 @@
         <div class="row">
             <div class="col-md-6">
                 <form action="http://127.0.0.1:5000/io/load" method = "POST" class="form-group">
-                    <button type="submit" class="btn btn-large btn-danger btn-block">Load</button>
+                    <!-- <button type="submit" class="btn btn-large btn-danger btn-block">Load</button> -->
+                    <input type="file" class="btn btn-large btn-danger btn-block" name="file" onchange="this.form.submit()">
                 </form>
             </div>
             <div class="col-md-6">
